# terakube

./: Cargo.toml  LICENSE  README.md  dockerfile  loco-cli.dockerfile  pvc.yaml
.github/workflows/: docker-build.yml
config/: development.yaml  test.yaml
examples/: Readme.md  jq-functions.jq  loco.j2  playground.rs
frontend/: package.json
frontend/src/: TemplateRenderer.css  TemplateRenderer.jsx  main.jsx
migration/src/: lib.rs  m20240203_115859_templates.rs
src/: app.rs
src/controllers/: mod.rs  templates.rs
src/models/: mod.rs  templates.rs
src/models/_entities/: mod.rs  prelude.rs  templates.rs
tests/models/: mod.rs  templates.rs  users.rs
tests/requests/: auth.rs  notes.rs  prepare_data.rs  templates.rs  user.rs
tests/tasks/: seed.rs
