[workspace]

[package]
name = "terakube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.74"
axum = "0.7.1"
chrono = "0.4"
eyre = "0.6"
include_dir = "0.7"
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_26"] }
loco-rs = { version = "0.2.3" }
migration = { path = "migration" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tera = "1.19.1"
tokio = { version = "1.33.0", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
sea-orm = { version = "0.12.4", features = ["sqlx-sqlite","sqlx-postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.6.0", features = ["v4"] }
validator = { version = "0.16" }

[[bin]]
name = "terakube-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
serial_test = "2.0.0"
rstest = "0.18.2"
loco-rs = { version = "0.2.3", features = ["testing"] }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
